added nav menu items

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
   </head>
   <body>
     <header>
-      <nav></nav>
+      <nav class="menu-items-container">
+        <div class="menu-items-logo">
+          <img class="logo-img" src="images/Frame.png" alt="" />
+          <h1 class="logo-title"><span>G</span>aming <span>H</span>ub</h1>
+        </div>
+        <div class="menu-items">
+          <li>About Us</li>
+          <li>Developers</li>
+          <div>
+            <p>follow us on</p>
+          </div>
+        </div>
+      </nav>
     </header>
     <main></main>
     <footer></footer>
