finished nav bar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaming Hub</title>
+    <script
+      src="https://kit.fontawesome.com/e930fca768.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="shortcut icon" href="images/Frame.png" type="image/png" />
     <link rel="stylesheet" href="styles/gamerzone.css" />
   </head>
@@ -17,8 +21,12 @@
         <div class="menu-items">
           <li>About Us</li>
           <li>Developers</li>
-          <div>
-            <p>follow us on</p>
+          <div class="follow-links">
+            <p>
+              follow us on
+              <i class="fa-brands fa-youtube" style="color: #cd201f"></i>
+              <i class="fa-brands fa-tiktok" style="color: #000000"></i>
+            </p>
           </div>
         </div>
       </nav>
