--- a/index.html
+++ b/index.html
@@ -31,7 +31,38 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div class="sign-in-container">
+          <div class="sign-in-contents">
+            <h3 class="section-title">
+              Play Like The <br /><span>G.O.A.T.</span>
+            </h3>
+            <ul class="color-light-gray">
+              <li>
+                <i class="fa-solid fa-play" style="color: #ff42a5"></i>
+                1-Click instant play
+              </li>
+              <li>
+                <i class="fa-solid fa-download" style="color: #ff42a5"></i>
+                No Download
+              </li>
+              <li>
+                <i class="fa-solid fa-users" style="color: #ff42a5"></i>
+                1000s of supported online games
+              </li>
+            </ul>
+            <div class="sign-in-btn">
+              <button class="btn-primary">Sign In</button>
+              <button class="btn-primary">Go Rogue</button>
+            </div>
+          </div>
+          <div class="sign-in-img">
+            <img src="images/Group 18.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
