finished sign-in section

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               </li>
             </ul>
             <div class="sign-in-btn">
-              <button class="btn-primary">Sign In</button>
-              <button class="btn-primary">Go Rogue</button>
+              <button class="btn-primary">sign in</button>
+              <button class="btn-secondary">Go Rogue</button>
             </div>
           </div>
           <div class="sign-in-img">
