made nav and sign-in section responsive

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="funny-videos-container"></div>
+      </section>
     </main>
     <footer></footer>
   </body>
