added funny videos section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/gamerzone.css" />
   </head>
   <body>
-    <header>
+    <header class="max-width">
       <nav class="menu-items-container">
         <div class="menu-items-logo">
           <img class="logo-img" src="images/Frame.png" alt="" />
@@ -63,7 +63,38 @@
         </div>
       </section>
       <section>
-        <div class="funny-videos-container"></div>
+        <div class="funny-videos-container max-width">
+          <h1 class="section-title">Online Games <span>Funny Videos</span></h1>
+          <p class="color-light-gray">
+            A Collection of Hilarious Videos to Brighten Your Day
+          </p>
+          <div class="cards-container">
+            <div class="card">
+              <img src="images/Rectangle 4.png" alt="" />
+              <p class="color-light-gray card-description">
+                No Download. No Installs. Play games Instantly on Gamer.
+              </p>
+            </div>
+            <div class="card">
+              <img src="images/Rectangle 5.png" alt="" />
+              <p class="color-light-gray card-description">
+                Did you score? #unblockedgames #school
+              </p>
+            </div>
+            <div class="card">
+              <img src="images/Rectangle 7.png" alt="" />
+              <p class="color-light-gray card-description">
+                Breaking game records like OG
+              </p>
+            </div>
+            <div class="card">
+              <img src="images/Rectangle 6.png" alt="" />
+              <p class="color-light-gray card-description">
+                Busted gaming on school laptop, but you are still lit.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
