--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="max-width">
       <nav class="menu-items-container">
-        <div class="menu-items-logo">
+        <div class="logo-container">
           <img class="logo-img" src="images/Frame.png" alt="" />
           <h1 class="logo-title"><span>G</span>aming <span>H</span>ub</h1>
         </div>
@@ -97,6 +97,31 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-contents">
+        <div class="logo-container">
+          <img class="logo-img" src="images/Frame.png" alt="" />
+          <h1 class="logo-title"><span>G</span>aming <span>H</span>ub</h1>
+        </div>
+        <div class="more-options">
+          <li>Our Story</li>
+          <li>Games</li>
+          <li>Web Games</li>
+          <li>Careers</li>
+          <li>Support</li>
+          <li>My Account</li>
+        </div>
+        <div class="social-links">
+          <a href=""
+            ><i class="fa-brands fa-twitter" style="color: #ffffff"></i
+          ></a>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
