added footer section

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
     </main>
     <footer>
       <div class="footer-contents">
-        <div class="logo-container">
+        <div class="footer-logo padding30">
           <img class="logo-img" src="images/Frame.png" alt="" />
           <h1 class="logo-title"><span>G</span>aming <span>H</span>ub</h1>
         </div>
-        <div class="more-options">
+        <div class="footer-options padding30">
           <li>Our Story</li>
           <li>Games</li>
           <li>Web Games</li>
@@ -111,16 +111,32 @@
           <li>Support</li>
           <li>My Account</li>
         </div>
-        <div class="social-links">
-          <a href=""
-            ><i class="fa-brands fa-twitter" style="color: #ffffff"></i
-          ></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
+        <div class="footer-social-icons padding30">
+          <a href="">
+            <img src="images/social-logo/twitter-logo.png" alt="" />
+          </a>
+          <a href="">
+            <img src="images/social-logo/facebook-logo.png" alt="" />
+          </a>
+          <a href="">
+            <img src="images/social-logo/linkedin.png" alt=" " />
+          </a>
+          <a href="">
+            <img src="images/social-logo/instagram-logo.png" alt="" />
+          </a>
+          <a href="">
+            <img src="images/social-logo/apple-logo.png" alt="" />
+          </a>
         </div>
+        <div class="footer-terms padding30">
+          <li>Terms and Conditions</li>
+          <li>Privacy Policy</li>
+          <li>Cookie Policy</li>
+          <li>Privacy Settings</li>
+        </div>
+        <p class="footer-terms padding30">
+          Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+        </p>
       </div>
     </footer>
   </body>
