--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
             <img src="images/social-logo/apple-logo.png" alt="" />
           </a>
         </div>
-        <div class="footer-terms padding30">
+        <div class="footer-terms padding30 font-weight-500">
           <li>Terms and Conditions</li>
           <li>Privacy Policy</li>
           <li>Cookie Policy</li>
           <li>Privacy Settings</li>
         </div>
-        <p class="footer-terms padding30">
+        <p class="font-weight-500 padding30">
           Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
         </p>
       </div>
