--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="sign-in-container">
           <div class="sign-in-contents">
             <h3 class="section-title">
-              Play Like The <br /><span>G.O.A.T.</span>
+              Play Like The <br /><span class="theme-color">G.O.A.T.</span>
             </h3>
             <ul class="color-light-gray">
               <li>
@@ -64,7 +64,9 @@
       </section>
       <section>
         <div class="funny-videos-container max-width">
-          <h1 class="section-title">Online Games <span>Funny Videos</span></h1>
+          <h1 class="section-title">
+            Online Games <span class="theme-color">Funny Videos</span>
+          </h1>
           <p class="color-light-gray">
             A Collection of Hilarious Videos to Brighten Your Day
           </p>
