added features section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,31 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="features-container">
+          <div class="features-contents">
+            <h1 class="section-title">
+              <span class="theme-color">Play Instantly,</span><br />No
+              Downloads<br />
+              No Installs.
+            </h1>
+            <p class="color-light-gray">
+              Play games online for free without downloading. Just click the
+              Play button and play instantly in your browser.
+            </p>
+          </div>
+          <div class="features-img-container">
+            <div>
+              <img src="images/Rectangle 55.png" alt="" />
+            </div>
+            <div class="side-img">
+              <img src="images/Rectangle 66.png" alt="" />
+            </div>
+            <div></div>
+          </div>
+          <div></div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-contents">
