--- a/index.html
+++ b/index.html
@@ -123,6 +123,44 @@
           <div></div>
         </div>
       </section>
+      <div class="game-categories-container">
+        <div class="game-category">
+          <img src="images/Rectangle 11.png" alt="" />
+          <p class="game-category-title">Action Games</p>
+        </div>
+        <div class="game-category">
+          <img src="images/Rectangle 12.png" alt="" />
+          <p class="game-category-title">Adventure Games</p>
+        </div>
+        <div class="game-category">
+          <img src="images/Rectangle 13.png" alt="" />
+          <p class="game-category-title">Arcade Games</p>
+        </div>
+        <div class="game-category">
+          <img src="images/Rectangle 14.png" alt="" />
+          <p class="game-category-title">Educational Games</p>
+        </div>
+        <div class="game-category">
+          <img src="images/Rectangle 15.png" alt="" />
+          <p class="game-category-title">Word Games</p>
+        </div>
+        <div class="game-category">
+          <img src="images/Rectangle 16.png" alt="" />
+          <p class="game-category-title">Role Palying Games</p>
+        </div>
+        <div class="game-category">
+          <img src="images/Rectangle 17.png" alt="" />
+          <p class="game-category-title">Music & Audio Games</p>
+        </div>
+        <div class="game-category">
+          <img src="images/Rectangle 18.png" alt="" />
+          <p class="game-category-title">Puzzle Games</p>
+        </div>
+        <div class="game-category">
+          <img src="images/Rectangle 19.png" alt="" />
+          <p class="game-category-title">Strategy Games</p>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer-contents">
